--- a/vila-flavia.css
+++ b/vila-flavia.css
@@ -9,9 +9,58 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 
 /*header*/
 
-.flex-container {
-    display: flex;
-    align-items: flex-start;
+html, body{
+    width: 100%;
+}
+a{
+    text-decoration: none;
+}
+div.nav-list-header{
+    height: 5em;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    background: #404040;
+    z-index: 999;
+}
+.navigation, .nav-menu, .nav-list-header{
+    display: inline-flex;
+    flex-grow: 1;
+    font-size: 1.2em;
+    line-height: 1.4em;
+    font-style: italic;
+    font-family: bitter,serif;
+    list-style: none;
+    align-items: center;
+    gap: 5%;
+}
+.nav-menu {
+    padding-left: 30%;
+}
+.menu-social{
+    display: inline-flex;
+    flex-wrap:wrap;
+    flex-grow: 0;
+    flex-shrink: 1;
+    text-align: center;
+    align-items: center;
+}
+.fa-brands,.nav-link,a{
+    color:#f2f2f2;
+}
+.fa-brands{
+    padding-left: .8em;
+    font-size: 2em;
+}
+.fa-brands:hover,
+.fa-brands:focus {
+    color: #999999;
+}
+.navigation:hover,
+.navigation:focus{
+    color: #999999;
+}
+section.slide {
     width: 100%;
     height: 700px;
     background-size: cover;
@@ -24,8 +73,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
     position: absolute;
     width: 100%;
     height: 700px;
-    top:0px;
-    left: 0px;
+    top: 4em;
+    left: 0;
     color: transparent;
     background-size: cover;
     background-position: 50% 50%;
@@ -77,75 +126,13 @@ ul,li,span{
 .no-cssanimations .cb-slideshow li span {
     opacity: 1;
 }
-html, body{
-    width: 100%;
-}
-a{
-    text-decoration: none;
-}
-div.nav-list-header{
-    height: 5em;
-    background: rgba(2,4,5,0.1);
-}
-.navigation, .nav-menu, .nav-list-header{
-    display: inline-flex;
-    flex-grow: 1;
-    font-size: 1.2em;
-    line-height: 1.4em;
-    font-style: italic;
-    font-family: bitter,serif;
-    list-style: none;
-    align-items: center;
-    gap: 5%;
-}
-.menu-social{
-    display: inline-flex;
-    flex-wrap:wrap;
-    flex-grow: 0;
-    flex-shrink: 1;
-    text-align: center;
-    align-items: center;
-}
-.fa-brands,.personal,.active,.nav-link, a{
-    color:#404040;
-}
-.fa-1x{
-    padding-left: 1em;
-    font-size: 1.3em;
-}
-.fa-brands{
-    padding-left: .8em;
-    font-size: 1.7em;
-}
-.fa-brands:hover,
-.fa-brands:focus {
-    color: #999999;
-}
-.nav-link:hover,
-.nav-link:focus{
-    color: #999999;
-}
-.active:hover,
-.active:focus{
-    color: #999999;
-}
-.personal{
-    display: inline-flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    flex-shrink: 1;
-}
-.personal :hover,
-.personal :focus {
-    color: #999999;
-}
 ul{
     margin-bottom: 0;
 }
 .logo {
     width: 55%;
-    position: absolute;
-    top: 20%;
+    position: relative;
+    top: 25%;
     left: 1%;
 }
 .text1{
@@ -158,7 +145,8 @@ ul{
     text-shadow: 2px 2px 2px white;
     animation: myfirst 4s linear;
     animation-timing-function: linear;
-    animation-iteration-count: 1;
+    animation-iteration-count: 2;
+    animation-direction: alternate;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -231,9 +219,7 @@ p {
     position: relative;
     float: right;
     display: inline-flex;
-
     flex-grow: 1;
-
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -242,11 +228,10 @@ p {
 .izba-foto1{
     width: 70%;
     border-radius: 6%;
+    transition:  all, 1s;
 }
 .izba-foto1:hover{
-    transform: scale (1, 0.5);
-    transition:  all, 1s;
-    width: 100%;
+    width: 90%;
 }
 
 /*uvod2*/
@@ -311,11 +296,10 @@ p {
 .foto3{
     width: 70%;
     border-radius: 6%;
+    transition:  all, 1s;
 }
 .foto3:hover{
-    transform: scale (1, 0.5);
-    transition:  all, 1s;
-    width: 100%;
+    width: 90%;
 }
 
 /*uvod3-ikona*/
@@ -428,14 +412,38 @@ img > p{
 
 /*footer*/
 
-footer{
+.container-footer{
     background: #999999;
-    height: 10em;
+    height: 13.5em;
+}
+.fa-1x{
+    padding-left: 1em;
+    font-size: 1.3em;
+}
+.personal{
+    display: inline-flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    flex-shrink: 1;
+    color: #404040;
+    padding-top: .5em;
+    font-size: 1.3em;
+    line-height: 2em;
+    font-style: italic;
+    font-family: bitter,serif;
+    list-style: none;
+    align-items: center;
+    gap: 5%;
+}
+.hauzi,.personal1 {
+    color: #404040;
+}
+.personal :hover,
+.personal :focus {
+    color: #ffffff;
 }
 .kontakt{
-    padding-left: 5%;
-    padding-top: .4em;
-    float: left;
+    padding-left: 1.2em;
     line-height: 1.2em;
     font-size: 1.2em;
     text-align: left;
@@ -447,11 +455,14 @@ footer{
     text-decoration: underline ;
     line-height: 2em;
 }
+.kontakt p{
+    margin: 0;
+}
 .info{
     display: flex;
 }
 .copy {
-    padding-top: 8em;
+    margin: 0;
     color: #404040;
     text-align: center;
     font-size: 1.2em;
@@ -473,10 +484,7 @@ footer{
 }
 
 /* nav bar - hamburger */
-.icon:hover,
-.icon:focus{
-    color: #999999;
-}
+
 .nav-menu .icon {
     display: none;
 }
@@ -490,9 +498,6 @@ footer{
     }
 }
 @media (max-width: 1000px){
-    .logo {
-        width: 60%;
-    }
     .text1 {
         font-size: 3em;
         top: 12em;
@@ -511,10 +516,6 @@ footer{
     .container1, .container2 {
         font-size: 1em;
     }
-    .logo {
-        width: 65%;
-        top: 22%;
-    }
     .fa-1x {
         padding-left: 1em;
     }
@@ -525,12 +526,20 @@ footer{
     .navigation {
         display: none;
     }
+    div.nav-list-header{
+        height: 4.5em;
+    }
     .nav-menu .icon {
         position: absolute;
         float: right;
         display: block;
         right: 2em;
         font-size: 25px;
+        color:#f2f2f2;
+    }
+    .nav-menu .icon:hover,
+    .nav-menu .icons:focus {
+        color: #999999;
     }
     .navigation.responsive .icon {
         position: absolute;
@@ -540,22 +549,21 @@ footer{
     .navigation.responsive a {
         position: relative;
         display: grid;
+        background: #666666;
+        box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.8);
         line-height: 1.5em;
         font-size: 1.1em;
-        padding-left: 0em;
     }
     .navigation.responsive {
         position: relative;
         display: grid;
-        top: 7em;
-        padding-left: 50%;
-        text-align: right;
+        top: 6.5em;
+        padding-left: 60%;
+        padding-right: 2em;
+        text-align: center;
     }
 }
 @media (max-width: 820px) {
-    .logo {
-        width: 70%;
-    }
     .text1 {
         font-size: 2.5em;
         top: 14.8em;
@@ -579,12 +587,6 @@ footer{
     }
 }
 @media (max-width: 700px){
-    .navigation.responsive {
-        padding-left: 35%;
-    }
-    .nav-menu .icon {
-        right: 1.5em;
-    }
     .recenzia4 {
         font-size: 1.1em;
     }
@@ -599,8 +601,15 @@ footer{
         width: 50px;
         height: 64px;
     }
+    .navigation.responsive {
+        padding-left: 55%;
+    }
 }
 @media (max-width: 600px) {
+    .logo {
+        width: 60%;
+    }
+
     @keyframes myfirst {
         from {
             left: 0px;
@@ -609,80 +618,71 @@ footer{
             left: 0%;
         }
     }
-    .menu-social {
-        width: 75%;
-    }
-    .nav-menu {
-        width: 25%;
-    }
+}
+@media (max-width: 550px){
     .navigation.responsive {
-        padding-left: 20%;
+        padding-left: 50%;
     }
 }
 @media (max-width: 490px){
-    div.nav-list-header {
-        height: 7em;
-    }
-    .menu-social, .personal, .social-icon{
-        display: grid;
-        grid-template-columns: repeat(1, 2fr);
-        align-items: center;
-        padding-left: 1em;
-    }
-    .menu-social {
-        width: 70%;
-    }
-    .nav-menu {
-        width: 30%;
-    }
     .navigation.responsive {
-        padding-right: 0%;
-        padding-left: 7%;
+        padding-left: 42%;
+    }
+    .text1 {
+        font-size: 2.2em;
+        top:  16.8em;
+    }
+    .container-footer {
+        height: 12em;
+    }
+    .personal1 {
+        font-size: 1em;
     }
 }
 @media (max-width: 450px){
-    .nav-menu .icon {
-        right: 1em;
-    }
     .navigation.responsive {
-        padding-left: 18%;
-    }
-    .menu-social, .personal, .social-icon{
-        padding-left: .5em;
-    }
-    .menu-social {
-        width: 50%;
-    }
-    .nav-menu {
-        width: 50%;
-    }
-    .nav-list-header{
-        font-size: 1em;
-        line-height: 1.3em;
-    }
-    .text1 {
-        top: 13em;
+        padding-left: 39%;
     }
 }
 @media (max-width: 410px){
+    .nav-menu {
+        font-size: 1em;
+    }
+    .navigation.responsive {
+        padding-left: 35%;
+    }
+    .text1 {
+        font-size: 2em;
+        top: 18em;
+    }
+    .button {
+        right: .5em;
+    }
+    .fa-2x {
+        font-size: 1.8em;
+    }
+}
+@media (max-width: 370px){
+    .navigation.responsive {
+        padding-left: 25%;
+    }
+    .text1 {
+        font-size: 1.7em;
+        top: 22em;
+    }
+}
+@media (max-width: 320px){
     .navigation.responsive {
         padding-left: 10%;
     }
+    .text1 {
+        font-size: 1.6em;
+        top: 24em;
+    }
 }
-@media (max-width: 350px) {
-    .nav-list-header {
-        gap: 0;
-    }
-    .menu-social {
-        font-size: .9em;
-    }
+@media (max-width: 290px){
     .navigation.responsive {
-        padding-right: 20%;
-    }
-    .menu-social, .personal, .social-icon{
-        padding-left: .5em;
+        padding-left: 18%;
     }
 }
-
-
 
