--- a/vila-flavia.css
+++ b/vila-flavia.css
@@ -9,6 +9,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 
 /*header*/
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 html, body{
     width: 100%;
 }
@@ -24,26 +31,40 @@ div.nav-list-header{
     z-index: 999;
 }
 .navigation, .nav-menu, .nav-list-header{
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     font-size: 1.2em;
     line-height: 1.4em;
     font-style: italic;
     font-family: bitter,serif;
     list-style: none;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 5%;
 }
 .nav-menu {
     padding-left: 30%;
 }
 .menu-social{
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-wrap:wrap;
-    flex-grow: 0;
-    flex-shrink: 1;
+    -ms-flex-wrap:wrap;
+        flex-wrap:wrap;
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+    -ms-flex-negative: 1;
+        flex-shrink: 1;
     text-align: center;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .fa-brands,.nav-link,a{
     color:#f2f2f2;
@@ -81,7 +102,8 @@ section.slide {
     background-repeat: no-repeat;
     opacity: 0;
     z-index: -1;
-    animation: imageAnimation 20s linear infinite 0s;
+    -webkit-animation: imageAnimation 20s linear infinite 0s;
+            animation: imageAnimation 20s linear infinite 0s;
 }
 ul,li,span{
     list-style: none;
@@ -92,20 +114,51 @@ ul,li,span{
 }
 .slideshow li:nth-child(2) span {
     background-image: url('./img/exterier/foto1.jpg');
-    animation-delay: 6s;
+    -webkit-animation-delay: 6s;
+            animation-delay: 6s;
 }
 .slideshow li:nth-child(3) span {
     background-image: url('./img/jedalen.jpg');
-    animation-delay: 12s;
+    -webkit-animation-delay: 12s;
+            animation-delay: 12s;
+}
+@-webkit-keyframes imageAnimation {
+    0% {
+        opacity: 0;
+        -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
+    }
+    8% {
+        opacity: 1;
+        -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+    }
+    17% {
+        opacity: 1
+    }
+    25% {
+        opacity: 1
+    }
+    50%{
+        opacity:0
+    }
+    75%{
+        opacity:0
+    }
+    100% {
+        opacity: 0
+    }
 }
 @keyframes imageAnimation {
     0% {
         opacity: 0;
-        animation-timing-function: ease-in;
+        -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
     }
     8% {
         opacity: 1;
-        animation-timing-function: ease-out;
+        -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
     }
     17% {
         opacity: 1
@@ -143,13 +196,21 @@ ul{
     font-family: 'Dancing Script', serif;
     color:#404040 ;
     text-shadow: 2px 2px 2px white;
-    animation: myfirst 4s linear;
-    animation-timing-function: linear;
-    animation-iteration-count: 2;
-    animation-direction: alternate;
+    -webkit-animation: myfirst 4s linear;
+            animation: myfirst 4s linear;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+    -webkit-animation-iteration-count: 2;
+            animation-iteration-count: 2;
+    -webkit-animation-direction: alternate;
+            animation-direction: alternate;
     text-align: center;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 p {
     margin: 1em;
@@ -159,6 +220,14 @@ p {
     text-shadow: 2px 2px 2px white;
     padding-left: .5em;
     font-size: .7em;
+}
+@-webkit-keyframes myfirst {
+    from {
+        left: 0px;
+    }
+    to {
+        left: 33.3%;
+    }
 }
 @keyframes myfirst {
     from {
@@ -171,25 +240,43 @@ p {
 /*uvod1*/
 
 .container1{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     position: relative;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 100%;
     padding-top: 5em;
+    background-image : -webkit-gradient(linear,left top, left bottom,from(#ffffff),color-stop(#ffffff), color-stop(#f2f2f2),color-stop(#e6e6e6),color-stop(#d9d9d9),color-stop(#cccccc),color-stop(#bfbfbf),to(#b3b3b3));
+    background-image : -o-linear-gradient(top,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
     background-image : linear-gradient(to bottom,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
     font-size: 1.3em;
     font-family: sans-serif;
     text-align: center;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     /* background-image: url('./img/ikons/_24_falling-snow-gif-transparent_falling-snow-gif-transparent-13-gif-images-download.gif');*/
 }
 .uvod{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
     width: 90%;
     padding-bottom: 5em;
@@ -197,15 +284,23 @@ p {
 }
 .text2{
     position: relative;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 30%;
     padding: 1em;
     border: .1em solid #d9d9d9;
     background-color: #e6e6e6;
-    box-shadow: 0px 0px 16px 16px #d9d9d9;
+    -webkit-box-shadow: 0px 0px 16px 16px #d9d9d9;
+            box-shadow: 0px 0px 16px 16px #d9d9d9;
 }
 .text2 strong{
     font-family: 'Playfair Display', serif;
@@ -218,44 +313,73 @@ p {
 .foto{
     position: relative;
     float: right;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-grow: 1;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
     width: 40%;
 }
 .izba-foto1{
     width: 70%;
     border-radius: 6%;
+    -webkit-transition:  all, 1s;
+    -o-transition:  all, 1s;
     transition:  all, 1s;
 }
 .izba-foto1:hover{
-    transform: scale(1.4, 1.4);
+    -webkit-transform: scale(1.4, 1.4);
+        -ms-transform: scale(1.4, 1.4);
+            transform: scale(1.4, 1.4);
 }
 
 /*uvod2*/
 
 .container2{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
     position: relative;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 100%;
     padding-top: 5em;
+    background-image : -webkit-gradient(linear,left top, left bottom,from(#ffffff),color-stop(#ffffff), color-stop(#f2f2f2),color-stop(#e6e6e6),color-stop(#d9d9d9),color-stop(#cccccc),color-stop(#bfbfbf),to(#b3b3b3));
+    background-image : -o-linear-gradient(top,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
     background-image : linear-gradient(to bottom,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
     font-size: 1.3em;
     font-family: sans-serif;
     text-align: center;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     /* background-image: url('./img/ikons/_24_falling-snow-gif-transparent_falling-snow-gif-transparent-13-gif-images-download.gif');*/
 }
 .uvod{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+
+        -ms-flex-align: center;
+
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
     width: 90%;
     padding-bottom: 5em;
@@ -263,17 +387,27 @@ p {
 }
 .text3{
     position: relative;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
 
-    justify-content: center;
+    -webkit-box-pack: center;
+
+        -ms-flex-pack: center;
+
+            justify-content: center;
     padding-top: 2em;
     width: 30%;
     padding: 1em;
     border: .1em solid #d9d9d9;
     background-color: #e6e6e6;
-    box-shadow: 0px 0px 16px 16px #d9d9d9;
+    -webkit-box-shadow: 0px 0px 16px 16px #d9d9d9;
+            box-shadow: 0px 0px 16px 16px #d9d9d9;
 }
 .text3 strong{
     font-family: 'Playfair Display', serif;
@@ -285,30 +419,47 @@ p {
 .foto2{
     position: relative;
     float: left;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    align-items: center;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
     width: 40%;
 }
 .foto3{
     width: 70%;
     border-radius: 6%;
+    -webkit-transition:  all, 1s;
+    -o-transition:  all, 1s;
     transition:  all, 1s;
 }
 .foto3:hover{
-    transform: scale(1.4, 1.4);
+    -webkit-transform: scale(1.4, 1.4);
+        -ms-transform: scale(1.4, 1.4);
+            transform: scale(1.4, 1.4);
 }
 
 /*uvod3-ikona*/
 
 .uvod2{
+    background-image : -webkit-gradient(linear,left top, left bottom,from(#ffffff),color-stop(#ffffff), color-stop(#f2f2f2),color-stop(#e6e6e6),color-stop(#d9d9d9),color-stop(#cccccc),color-stop(#bfbfbf),to(#b3b3b3));
+    background-image : -o-linear-gradient(top,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
     background-image : linear-gradient(to bottom,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
 }
 .grid-container {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto auto auto auto;
     grid-template-columns: auto auto auto auto;
     row-gap: 20%;
     padding-top: 5em;
@@ -328,24 +479,41 @@ img > p{
 /*uvod4*/
 
 .uvod3{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     position: relative;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 100%;
     padding-top: 7%;
+    background-image : -webkit-gradient(linear,left top, left bottom,from(#ffffff),color-stop(#ffffff), color-stop(#f2f2f2),color-stop(#e6e6e6),color-stop(#d9d9d9),color-stop(#cccccc),color-stop(#bfbfbf),to(#b3b3b3));
+    background-image : -o-linear-gradient(top,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
     background-image : linear-gradient(to bottom,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
     font-size: 1.3em;
     font-family: sans-serif;
     text-align: center;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 .uvod{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
     width: 90%;
 }
@@ -357,8 +525,11 @@ img > p{
 .hodnotenie-hauzi {
     padding-top: 4%;
     padding-bottom: 13%;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     font-family: 'Playfair Display', serif;
     font-size: 1.2em;
 }
@@ -366,7 +537,10 @@ img > p{
     margin-bottom: 0;
 }
 .recenzie{
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    background-image : -webkit-gradient(linear,left top, left bottom,from(#ffffff),color-stop(#ffffff), color-stop(#f2f2f2),color-stop(#e6e6e6),color-stop(#d9d9d9),color-stop(#cccccc),color-stop(#bfbfbf),to(#b3b3b3));
+    background-image : -o-linear-gradient(top,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
     background-image : linear-gradient(to bottom,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
     padding-bottom: 3%;
 }
@@ -377,11 +551,16 @@ img > p{
     width: 100%;
 }
 .grid-container-recenzie{
+    display: -ms-grid;
     display: grid;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     width: 100%;
+    -ms-grid-columns: auto 10% auto 10% auto;
     grid-template-columns: auto auto auto ;
-    column-gap: 10%;
+    -webkit-column-gap: 10%;
+       -moz-column-gap: 10%;
+            column-gap: 10%;
     padding-top: 5%;
     text-align: center;
 }
@@ -421,10 +600,16 @@ img > p{
     font-size: 1.3em;
 }
 .personal{
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    flex-shrink: 1;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    -ms-flex-negative: 1;
+        flex-shrink: 1;
     color: #404040;
     padding-top: .5em;
     font-size: 1.3em;
@@ -432,7 +617,9 @@ img > p{
     font-style: italic;
     font-family: bitter,serif;
     list-style: none;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 5%;
 }
 .hauzi,.personal1 {
@@ -459,6 +646,8 @@ img > p{
     margin: 0;
 }
 .info{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .copy {
@@ -480,6 +669,8 @@ img > p{
 #button:hover,
 #button:focus {
     opacity: 1;
+    -webkit-transition: opacity .4s;
+    -o-transition: opacity .4s;
     transition: opacity .4s;
 }
 
@@ -503,6 +694,8 @@ img > p{
         top: 12em;
     }
     .grid-container-recenzie{
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
         display: inline-flex;
     }
     .recenzia1 {
@@ -551,14 +744,17 @@ img > p{
     }
     .navigation.responsive a {
         position: relative;
+        display: -ms-grid;
         display: grid;
         background: #666666;
-        box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.8);
+        -webkit-box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.8);
+                box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.8);
         line-height: 1.5em;
         font-size: 1.1em;
     }
     .navigation.responsive {
         position: relative;
+        display: -ms-grid;
         display: grid;
         top: 6.5em;
         padding-left: 60%;
@@ -570,6 +766,14 @@ img > p{
     .text1 {
         font-size: 2.5em;
         top: 14.8em;
+    }
+    @-webkit-keyframes myfirst {
+        from {
+            left: 0px;
+        }
+        to {
+            left: 18%;
+        }
     }
     @keyframes myfirst {
         from {
@@ -589,10 +793,14 @@ img > p{
         padding-bottom: 3em;
     }
     .izba-foto1:hover{
-        transform: scale(1.3, 1.3);
+        -webkit-transform: scale(1.3, 1.3);
+            -ms-transform: scale(1.3, 1.3);
+                transform: scale(1.3, 1.3);
     }
     .foto3:hover{
-        transform: scale(1.3, 1.3);
+        -webkit-transform: scale(1.3, 1.3);
+            -ms-transform: scale(1.3, 1.3);
+                transform: scale(1.3, 1.3);
     }
     .grid-container {
         row-gap: 11%;
@@ -608,6 +816,7 @@ img > p{
 }
 @media (max-width: 620px) {
     .grid-container {
+        -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
         row-gap: 7%;
         padding-bottom: 12em;
@@ -623,6 +832,15 @@ img > p{
 @media (max-width: 600px) {
     .logo {
         width: 60%;
+    }
+
+    @-webkit-keyframes myfirst {
+        from {
+            left: 0px;
+        }
+        to {
+            left: 0%;
+        }
     }
 
     @keyframes myfirst {
@@ -727,5 +945,4 @@ img > p{
         bottom: 5em;
     }
 }
-
 
